# A-Maz-Ing

./: Makefile  README.md  a_maze_ing.py  cell.py  config.txt  draw.py  error_class.py  gen_42.py  gen_maze.py  maze.py  maze.txt  maze_output.txt  output.txt  pyproject.toml  test.py
init/: README.md  a_maze_ing.py  cell.py  error_class.py  exampel.txt  gen_maze.py  maze.py  maze_output.txt  maze_random.txt  maze_seed.txt
init_algos/: gen.py
maze/: config.txt  maze.txt
maze/mazegen/: __init__.py
maze_generator/: __init__.py  cell.py  error_class.py  gen_maze.py  maze.py  playing_mod.py  themes.py
mazegen/: __init__.py  cell.py  gen_maze.py  playing_mod.py  terminal_ctl.py  themes.py
turt/: Makefile  a_maze_ing.py  am.py  config.txt  maze.txt
turt/mazegen/: generator.py
